# WatchMyAi-DaC

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  detection-rules-deploy.yml  live-distributed-validation.yml  watchmyai-ci.yml
deployment/: README.md  remediation-matrix.csv  rules_schema_1.1.0.ndjson
detection-rules/: README.md
detection-rules/deployment/: README.md  export_rules.sh
detection-rules/detections/: manifest.yml
detection-rules/detections/elastic/: WMAI-001.json  WMAI-002.json  WMAI-007.json  WMAI-009.json  WMAI-022.json  WMAI-023.json  WMAI-024.json  WMAI-025.json  WMAI-030.json  WMAI-048.json  WMAI-051.json  WMAI-053.json  WMAI-054.json  WMAI-055.json  WMAI-057.json  WMAI-058.json  WMAI-059.json  WMAI-060.json  WMAI-061.json  WMAI-063.json
detection-rules/detections/metadata/: WMAI-001.yml  WMAI-002.yml  WMAI-007.yml  WMAI-009.yml  WMAI-022.yml  WMAI-023.yml  WMAI-024.yml  WMAI-025.yml  WMAI-030.yml  WMAI-048.yml  WMAI-051.yml  WMAI-053.yml  WMAI-054.yml  WMAI-055.yml  WMAI-057.yml  WMAI-058.yml  WMAI-059.yml  WMAI-060.yml  WMAI-061.yml  WMAI-063.yml
detection-rules/detections/schema/: custom_fields.json  elastic_rule.schema.json  rule.schema.json  supported_ecs_fields.json
detection-rules/playbooks/: WMAI-001.md  WMAI-002.md  WMAI-007.md  WMAI-009.md  WMAI-022.md  WMAI-023.md  WMAI-024.md  WMAI-025.md  WMAI-030.md  WMAI-048.md  WMAI-051.md  WMAI-053.md  WMAI-054.md  WMAI-055.md  WMAI-057.md  WMAI-058.md  WMAI-059.md  WMAI-060.md  WMAI-061.md  WMAI-063.md
detection-rules/research/deferred-catalog/elastic/: WMAI-004.json  WMAI-005.json  WMAI-008.json  WMAI-015.json  WMAI-016.json  WMAI-017.json  WMAI-018.json  WMAI-019.json  WMAI-020.json  WMAI-021.json  WMAI-026.json  WMAI-027.json  WMAI-028.json  WMAI-029.json  WMAI-031.json  WMAI-032.json  WMAI-033.json  (+28 more)
detection-rules/scripts/: package_rules.py  rulelib.py  smoke_test_elastic.py  validate.py
detection-rules/tests/: __init__.py
detection-rules/tests/fixtures/: manifest.json
detection-rules/tests/integration/: test_packaging.py
detection-rules/tests/regression/: test_rule_validation.py
detection-rules/tests/schema/: test_schemas.py
detection-rules/tests/unit/: test_rulelib.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DETECTION_RULES.md  INSTALLATION.md  QUICKSTART.md  README.md  SETUP_AND_CONFIGURATION.md  TROUBLESHOOTING.md  UNINSTALL.md  VERIFICATION.md
fixtures/telemetry/: canonical.ndjson
release/: excluded-rules.json  technical-readiness.json
release/validation/: lab-results.json
scenarios/: __init__.py
scenarios/definitions/: supported-rules.json
scenarios/runners/: __init__.py  run_scenario.py
scripts/: __init__.py  preflight.py
scripts/import/: __init__.py  import_rules.py
scripts/install/: install.ps1  install.sh
scripts/rules/: reconcile_rules.py
scripts/utilities/: __init__.py  build_release.py  build_source_archive.py  release_contract.py
scripts/validate/: __init__.py  preflight.ps1  preflight.sh  run_supported_rules.py  validate_config.py  validate_docs.py  validate_ndjson.py  validate_project.py  validate_technical_readiness.py  validate_telemetry_schema.py
src/watchmyai/: __init__.py  gateway.py  onboarding.py  runtime.py
src/watchmyai/approval/: __init__.py
src/watchmyai/capability/: __init__.py  service.py
src/watchmyai/capture/: process.py
src/watchmyai/classifiers/: path.py
src/watchmyai/cli/: __init__.py  main.py
src/watchmyai/core/: __init__.py
src/watchmyai/distribution/: __init__.py  canonical.py  client.py  store.py
src/watchmyai/enforcement/: __init__.py  pep.py
src/watchmyai/evidence/: chain.py
src/watchmyai/normalization/: normalizer.py
src/watchmyai/policy/: __init__.py  policy_bundle.schema.json
src/watchmyai/resources/: agent_signatures.yml  policy-bundle.yml
telemetry-gateway/: README.md
telemetry-gateway/deployment/elastic/: README.md  component_template.json  ilm_policy.json  index_template.json  ingest_pipeline.json  kibana.ndjson  load-assets.sh
telemetry-gateway/docs/: ADAPTERS.md  AGENT_DISCOVERY.md  APPROVAL_MODEL.md  ARCHITECTURE.md  ELASTIC_INTEGRATION.md  INCIDENT_RESPONSE.md  INSTALLATION.md  LIMITATIONS.md  OPERATIONS.md  POLICY_MODEL.md  SIGNED_POLICY_DISTRIBUTION.md  TELEMETRY_SCHEMA.md  TESTING.md
telemetry-gateway/fixtures/: README.md
telemetry-gateway/fixtures/approval/: replay_scenario.json
telemetry-gateway/fixtures/claude_code/: notification_permission.json  post_tool_use_edit.json  pre_tool_use_bash.json  pre_tool_use_mcp.json  session_end.json  session_start.json  subagent_stop.json  user_prompt_submit.json
telemetry-gateway/fixtures/codex_cli/: notify_turn_complete.json  rollout-basic.jsonl
telemetry-gateway/fixtures/desktop/: process_snapshot.json
telemetry-gateway/fixtures/mcp/: session.jsonl
telemetry-gateway/fixtures/policy/: child_delegation.json  context_poisoning.json  task_scope_violation.json  tool_scope_violation.json
telemetry-gateway/fixtures/unknown_cli/: process_snapshot.json
telemetry-gateway/src/watchmyai/: __init__.py
telemetry-gateway/tests/: __init__.py  conftest.py  test_approval_atomic.py  test_cli_policy_errors.py  test_core.py  test_distribution.py  test_onboarding.py  test_packaged_resources.py  test_runtime_adapters.py  test_secret_safety.py
tests/: test_preflight.py  test_project_consistency.py  test_release_hardening.py
(+293 files in other folders)
